Created endpoints for checkout and returning books, plus included some error handling
